# 4-pong

./: .gitignore  CMakeLists.txt  Gravity.h  Player.h  README.md
4-pong/: 4-pong.cpp  4-pong.h  Ball.cpp  Ball.h  CMakeLists.txt  Collisions.cpp  Collisions.h  Controller.cpp  Controller.h  GameObject.cpp  GameObject.h  Gravity.h  Player.cpp  Player.h  glad.c  static.h
4-pong/controllers/: AiPlayer.cpp  BallController.cpp  BallController.h  Controller.cpp  Controller.h  PaddleController.cpp  PaddleController.h  Player.h
4-pong/game_objects/: GameObject.cpp  GameObject.h
4-pong/glad/: glad.h
4-pong/players/: AiPlayer.cpp  AiPlayer.h  HumanPlayer.cpp  HumanPlayer.h  Player.h
4-pong/shaders/: Shaders.cpp  Shaders.h  fragment.shader  vertex.shader
glad/include/glad/: glad.h
glad/src/: glad.c
